test: adicionando teste unitarios na camada de service